feat(api): verify email tokens
