# apps/api/src/auth/dto/verify-email-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+export class VerifyEmailResponseDto {
+  @ApiProperty({ type: Boolean, enum: [true] })
+  verified!: true;
+}
